--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
 envlist =
-    {py36,py37,py38,py39},
+    {py37,py38,py39},
     flake8
 
-[testenv:{py36, py37, py38, py39}]
+[testenv:{py37, py38, py39}]
 usedevelop=True
 deps = -rrequirements/tests.txt
 commands = pytest -vv {posargs} --cov=inori --cov-append tests
