Add python 3.11 env to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist =
     {py37,py38,py39},
     flake8
 
-[testenv:{py37, py38, py39, py310}]
+[testenv:{py37, py38, py39, py310, py311}]
 usedevelop=True
 deps = -rrequirements/tests.txt
 commands = pytest -vv {posargs} --cov=inori --cov-append tests
