--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ deps = -rrequirements/tests.txt
 commands = pytest -vv {posargs} --cov=inori --cov-append tests
 
 # Code style
-[testenv:flake8]
+[testenv:lint]
 skip_install = true
 deps = -rrequirements/lint.txt
 changedir = .
