--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -6,7 +6,6 @@ build:
 python:
   version: 3.8
   install:
+    - requirements: requirements/docs.txt
     - method: pip
       path: .
-      extra_requirements:
-        - shibari
