Cleanup tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
-    {py37,py38,py39},
-    flake8
+    {py37,py38,py39,py310,py311},
+    lint
 
 [testenv:{py37, py38, py39, py310, py311}]
 usedevelop=True
