--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
 envlist =
-    {py37,py38,py39,py310,py311},
+    {py38,py39,py310,py311},
     lint
 
-[testenv:{py37, py38, py39, py310, py311}]
+[testenv:{py38, py39, py310, py311}]
 usedevelop=True
 deps = -rrequirements/tests.txt
 commands = pytest -vv {posargs} --cov=inori --cov-append tests
