fix: Fix docs building and change theme

--- a/tox.ini
+++ b/tox.ini
@@ -14,3 +14,12 @@ skip_install = true
 deps = -rrequirements/lint.txt
 changedir = .
 commands = flake8 inori tests
+
+[testenv:build_docs]
+allowlist_externals = make
+deps =
+  -rrequirements/docs.txt
+changedir = docs/
+commands =
+    make clean
+    make {posargs}
