--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,10 +1,12 @@
 version: 2
 
 build:
-  image: latest
+  os: ubuntu-22.04
+  tools:
+    python: "3.12"
+
 
 python:
-  version: 3.8
   install:
     - requirements: requirements/docs.txt
     - method: pip
